--- a/src/components/Aside/Aside.css
+++ b/src/components/Aside/Aside.css
@@ -1,5 +1,3 @@
 .aside {
   background-color: #c29591;
-  width: 100%;
-  padding: 30px;
 }
