--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,5 +1,9 @@
 .nav {
   background-color: #b6c199;
-  width: 100%;
   padding: 30px;
+  /*min-height: 100%; this causes aside to bleed into nave at 1200px*/
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  text-decoration: underline;
 }
